@@ -26,7 +26,11 @@ package com.yubico.webauthn.data;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.yubico.internal.util.CollectionUtil;
+import com.yubico.internal.util.JacksonCodecs;
 import java.util.List;
 import java.util.Optional;
 import lombok.Builder;
@@ -119,6 +123,22 @@ public class PublicKeyCredentialRequestOptions {
 
   public Optional<List<PublicKeyCredentialDescriptor>> getAllowCredentials() {
     return Optional.ofNullable(allowCredentials);
+  }
+
+  /**
+   * Serialize this {@link PublicKeyCredentialRequestOptions} value to JSON suitable for sending to
+   * the client and passing as an argument to <code>navigator.credentials.get()</code>, after
+   * decoding binary options from Base64Url strings.
+   *
+   * @return a JSON value suitable for sending to the client and passing as an argument to <code>
+   *     navigator.credentials.get()</code>, after decoding binary options from Base64Url strings.
+   * @throws JsonProcessingException if JSON serialization fails.
+   */
+  public String toCredentialsGetJson() throws JsonProcessingException {
+    ObjectMapper json = JacksonCodecs.json();
+    ObjectNode result = json.createObjectNode();
+    result.set("publicKey", json.valueToTree(this));
+    return json.writeValueAsString(result);
   }
 
   public static PublicKeyCredentialRequestOptionsBuilder.MandatoryStages builder() {
